# m365-copilot-proxy

./: .gitignore  README.md  TOKEN_REFRESH.md  installer.iss  installer_nuitka.ps1  proxy-toggle.bat  proxy.ps1  proxy.sh  pyproject.toml
docs/: CONFIGURATION.md  TOOL_MIDDLEWARE.md
packaging/: build-exe.ps1  build_entry.py  installer.iss  installer_nuitka.ps1
prompts/: messages.properties  tool_emulation_injection.md
setup/: opencode.bat  opencode.ps1  opencode.sh  setup.ps1  setup.sh
src/: runtime_bridge.py
src/m365_copilot_openai_proxy/: __init__.py  __main__.py  anthropic_passthrough.py  app.py  cli.py  config.ini.template  config.py  graph_client.py  messages.properties  messages.py  models.py  session_store.py  substrate.json  substrate_client.py  substrate_config.py  token_store.py  tool_shim.py  translator.py  tray_app.py
src/m365_copilot_openai_proxy/tool_middleware/: adapters.py  bypass.py  pipeline.py  runtime_bridge.py  tool_emulation.py
src/middleware/: __init__.py  adapters.py  models.py  native_backend.py  pipeline.py  runtime_bridge.py  tool_emulation.py
tests/: test_app.py  test_features.py  test_ini_config.py  test_opencode.py  test_responses_tool_compat.py  test_runtime_bridge.py  test_runtime_bridge_skills_plugins.py  test_standard_tool_middleware.py  test_tool_call_extraction.py  test_tool_middleware.py
