[project]
name = "m365-copilot-openai-proxy"
dynamic = ["version"]
description = "OpenAI-compatible shim for Microsoft 365 Copilot Chat"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.0,<1.0.0",
    "httpx>=0.28.0,<1.0.0",
    "pydantic-settings>=2.10.0,<3.0.0",
    "uvicorn>=0.35.0,<1.0.0",
    "websockets>=12.0,<15.0",
    "customtkinter>=5.2.0,<6.0.0",
    "pystray>=0.19.0,<1.0.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0,<9.0.0",
    "pyinstaller>=6.0.0",
]

[project.scripts]
copilot-openai-proxy = "m365_copilot_openai_proxy.cli:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

# Single source of truth: version is read from m365_copilot_openai_proxy.__version__.
[tool.hatch.version]
path = "src/m365_copilot_openai_proxy/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/m365_copilot_openai_proxy", "src/middleware"]

# Ship the non-Python config data (capture-derived protocol payload + prompt message bundle).
[tool.hatch.build.targets.wheel.force-include]
"src/m365_copilot_openai_proxy/substrate.json" = "m365_copilot_openai_proxy/substrate.json"
"src/m365_copilot_openai_proxy/messages.properties" = "m365_copilot_openai_proxy/messages.properties"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "real_model: opencode test with real model (requires network access and valid credentials)"
]